--- a/WebPastas.csproj
+++ b/WebPastas.csproj
@@ -152,11 +152,18 @@
     <Compile Include="Controllers\ErrorController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ProductoController.cs" />
+    <Compile Include="Controllers\RemitoController.cs" />
     <Compile Include="Controllers\StockController.cs" />
     <Compile Include="Filters\AutorizaUsuario.cs" />
     <Compile Include="Filters\VerificaSession.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
+    </Compile>
+    <Compile Include="Models\camara.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\camara_stock.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Model1.Context.cs">
       <AutoGen>True</AutoGen>
@@ -172,6 +179,9 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Model1.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="Models\movimiento.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\producto.cs">
       <DependentUpon>Model1.tt</DependentUpon>
@@ -194,9 +204,14 @@
     <Compile Include="Models\stock.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\tipo_movimiento.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\ViewModels\ListProductoViewModel.cs" />
     <Compile Include="Models\ViewModels\ListStockViewModel.cs" />
     <Compile Include="Models\ViewModels\ProductoViewModel.cs" />
+    <Compile Include="Models\ViewModels\RemitoViewModel.cs" />
+    <Compile Include="Models\ViewModels\TipoMovimientoViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -261,6 +276,8 @@
     <Content Include="Views\Producto\Add.cshtml" />
     <Content Include="Views\Producto\Edit.cshtml" />
     <Content Include="Views\Stock\Index.cshtml" />
+    <Content Include="Views\Remito\Index.cshtml" />
+    <Content Include="Views\Remito\Add.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
